# visionforge

./: .gitignore  LICENSE  README.md  build_all.sh  generate_all.sh  mv_structure.txt  push_all.sh
projects/HalconVision/: .gitignore  CMakeLists.txt  README.md  run.sh
projects/HalconVision/assets/: README.txt
projects/HalconVision/assets/ocr_sample/: ocr_test_000.txt  ocr_test_001.txt  ocr_test_002.txt
projects/HalconVision/config/: vision_config.json
projects/HalconVision/src/algorithm/OcrModule/: OcrBottleAlgo.cpp  OcrBottleAlgo.h
projects/HalconVision/src/app/: ConsoleMain.cpp
projects/HalconVision/src/core/: CommonStruct.h  HalconTool.cpp  HalconTool.h  LogService.cpp  LogService.h
projects/ShapeMatch/: CMakeLists.txt  run.sh
projects/ShapeMatch/assets/: README.txt
projects/ShapeMatch/src/algorithm/: ShapeMatch.cpp  ShapeMatch.h
projects/ShapeMatch/src/base/: image_base.cpp  image_base.h
projects/ShapeMatch/src/ui/: MainWindow.cpp  MainWindow.h  main.cpp
projects/ShapeMatch/src/utils/: cross_util.cpp  cross_util.h
projects/Struct3DInspect/: CMakeLists.txt  README.md  run.sh
projects/Struct3DInspect/assets/: README.txt
projects/Struct3DInspect/src/algorithm/: GrayCodeGen.cpp  GrayCodeGen.h  MultiFreqUnwrap.cpp  MultiFreqUnwrap.h  PhaseShiftSolver.cpp  PhaseShiftSolver.h
projects/Struct3DInspect/src/core/: ImageBase.cpp  ImageBase.h  ImageProc.cpp  ImageProc.h  PointCloudFilter.cpp  PointCloudFilter.h  StructParam.h  Triangulate.cpp  Triangulate.h
projects/Struct3DInspect/src/io/: CSVWriter.cpp  CSVWriter.h  PointCloudIO.cpp  PointCloudIO.h
projects/Struct3DInspect/src/ui/: MainWindow.cpp  MainWindow.h  main.cpp
projects/StructMeasure/: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
projects/StructMeasure/assets/: README.txt
projects/StructMeasure/src/: MainWindow.cpp  MainWindow.h  StructureMeasure.cpp  StructureMeasure.h  main.cpp
projects/VisionInspect/: CMakeLists.txt  README.md  run.sh
projects/VisionInspect/assets/: README.txt
projects/VisionInspect/src/algorithm/: DefectDetect2D.cpp  DefectDetect2D.h  Detect3D.cpp  Detect3D.h  FeatureDetect.cpp  FeatureDetect.h  Measure2D.cpp  Measure2D.h
projects/VisionInspect/src/calibration/: CameraCalib.cpp  CameraCalib.h  HandEyeCalib.cpp  HandEyeCalib.h  StereoCalib.cpp  StereoCalib.h
projects/VisionInspect/src/core/: ImageBase.cpp  ImageBase.h  Matrix.cpp  Matrix.h  Timer.cpp  Timer.h
projects/VisionInspect/src/io/: CSVWriter.cpp  CSVWriter.h  JsonIO.cpp  JsonIO.h  PLYWriter.cpp  PLYWriter.h
projects/VisionInspect/src/ui/: MainWindow.cpp  MainWindow.h
